<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradien_background"
    android:backgroundTint="#673AB7"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".timelapseapp.TimeLapseAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/widget_white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/timeLapseApp_results"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeLapseApp_numberOfPictures"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeLapseResult0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeLapseApp_defaultNumberOfPictures"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeLapseApp_memoryNeeded"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeLapseResult1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeLapseApp_defaultMemoryNeeded"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundcorner"
                android:backgroundTint="@color/widget_white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timeLapseApp_videoLength"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/videoLengthTextView"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/roundcornerforbuttons"
                    android:gravity="center"
                    android:onClick="onVideoLengthTextViewClick"
                    android:text="@string/timeLapseApp_defaultVideoLength"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundcorner"
                android:backgroundTint="@color/widget_white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timeLapseApp_FPS"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fpsTextView"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/roundcornerforbuttons"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:onClick="onFOSTextViewClick"
                    android:text="@string/timeLapseApp_defaultFPS"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundcorner"
                android:backgroundTint="@color/widget_white"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timeLapseApp_sizeOfPictures"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mbTextView"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:background="@drawable/roundcornerforbuttons"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:onClick="onMBTextViewClick"
                    android:text="@string/timeLapseApp_defaultSizeOfPictures"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>