<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roundcorner"
    android:backgroundTint="@color/widget_white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/myTimePicker_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/myTimePickerDialogOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <EditText
            android:id="@+id/myTimePickerDialogH"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/widget_white"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />


        <TextView
            android:id="@+id/textView21"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/myTimePicker_h"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/myTimePickerDialogM"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/widget_white"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/myTimePicker_m"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/myTimePickerDialogS"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/widget_white"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/myTimePicker_s"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/myTimePickerDialogOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="@color/widget_white"
        android:text="@string/myTimePicker_OK"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>